--- a/app/src/main/res/layout/message_page.xml
+++ b/app/src/main/res/layout/message_page.xml
@@ -14,7 +14,7 @@
                 android:orientation="vertical">
             </ListView>
 
-            <TextView
+            <Button
                 style="@style/MainPageBorder"
                 android:id="@+id/v_message_input"
                 android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                 android:textSize="30sp"
                 android:layout_alignParentBottom="true"
                 android:orientation="horizontal">
-            </TextView>
+            </Button>
 
         </RelativeLayout>
 
