细节更改，新增文件处理、SQLite处理类，逻辑未编写

--- a/app/src/main/res/layout/clients_adapter_layout.xml
+++ b/app/src/main/res/layout/clients_adapter_layout.xml
@@ -36,6 +36,12 @@
             android:layout_below="@id/v_client_name"
             android:text="hello"/>
 
+        <ImageView
+            android:id="@+id/v_client_is_connect"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"/>
+
     </RelativeLayout>
 
 </RelativeLayout>
