--- a/app/src/main/res/menu/message_page_menu.xml
+++ b/app/src/main/res/menu/message_page_menu.xml
@@ -3,4 +3,7 @@
 
     <item android:id="@+id/v_m_history"
         android:title="查看历史记录"></item>
+
+    <item android:id="@+id/v_m_delete_topic"
+        android:title="删除话题"></item>
 </menu>
