存储处理模块完善， 修改部分页面细节及显示bug， 添加消息提醒机制，

--- a/app/src/main/res/layout/clients_adapter_layout.xml
+++ b/app/src/main/res/layout/clients_adapter_layout.xml
@@ -38,9 +38,17 @@
 
         <ImageView
             android:id="@+id/v_client_is_connect"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"/>
+
+        <ImageView
+            android:id="@+id/v_client_has_new"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_toLeftOf="@+id/v_client_is_connect"
+            android:layout_marginRight="10dp"/>
 
     </RelativeLayout>
 
