--- a/app/src/main/res/layout/message_page_adapter_layout.xml
+++ b/app/src/main/res/layout/message_page_adapter_layout.xml
@@ -5,15 +5,30 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/v_message_what_help"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="message:"/>
+
+    <TextView
         android:id="@+id/v_message_what"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/v_message_what_help"
         android:text="hello"/>
+
+    <TextView
+        android:id="@+id/v_message_info_help"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/v_message_what_help"
+        android:text="info:"/>
 
     <TextView
         android:id="@+id/v_message_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/v_message_info_help"
         android:layout_below="@+id/v_message_what"
         android:text="hello"/>
 </RelativeLayout>
