--- a/app/src/main/res/layout/topic_adapter_layout.xml
+++ b/app/src/main/res/layout/topic_adapter_layout.xml
@@ -12,7 +12,7 @@
             android:id="@+id/v_help_topic_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="topic:  "/>
+            android:text="topic name:  "/>
 
         <TextView
             android:id="@+id/v_topic_name"
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/v_help_topic_name"
-            android:text="type:  "/>
+            android:text="topic type:  "/>
 
         <TextView
             android:id="@+id/v_topic_type"
@@ -35,6 +35,28 @@
             android:layout_toRightOf="@id/v_help_topic_type"
             android:layout_below="@id/v_topic_name"
             android:text="hello"/>
+
+        <TextView
+            android:id="@+id/v_help_topic_Qos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/v_help_topic_type"
+            android:text="Qos:  "/>
+
+        <TextView
+            android:id="@+id/v_topic_Qos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/v_help_topic_Qos"
+            android:layout_below="@id/v_topic_type"
+            android:text="hello"/>
+
+        <ImageView
+            android:id="@+id/v_topic_has_new"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"/>
 
     </RelativeLayout>
 
