修改历史报文查看，更改publish方式 存在问题：     publish报文需要做更改，或者在点击发布报文按钮时进行字符串转换

--- a/app/src/main/res/layout/publish_message_page.xml
+++ b/app/src/main/res/layout/publish_message_page.xml
@@ -97,7 +97,8 @@
             style="@style/MainPageBorder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="top"/>
+            android:gravity="top"
+            android:hint="@string/s_v_example"/>
 
     </LinearLayout>
 
