--- a/app/src/main/res/layout/message_info_table.xml
+++ b/app/src/main/res/layout/message_info_table.xml
@@ -26,7 +26,7 @@
             android:id="@+id/v_message_t_integer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="utf-8"
+            android:text="byte数组"
             android:paddingRight="20dp"
             android:checked="true"/>
     </RadioGroup>
