--- a/app/src/main/res/layout/history_ubytes_adapter.xml
+++ b/app/src/main/res/layout/history_ubytes_adapter.xml
@@ -9,4 +9,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="hello"/>
+
+    <TextView
+        android:id="@+id/v_history_message_dir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hello"
+        android:layout_alignParentRight="true"/>
 </RelativeLayout>
